test-resources/invalid-project/src/main/java/test/group/id/ALM.java
package test.group.id;

/**
 * ؜
 * Bidi characters above
 */
public class ALM
{
    public static void main( String[] args )
    {
        System.out.println( "Hello World!" );
    }
}
